Initial commit: Pembangunan Sistem Kehadiran

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Selamat Datang ke Sistem Kehadiran Pelajar</h1>
+    <p>Sila tekan butang di bawah untuk merekod kehadiran anda</p>
     
   
     <button id="rekodBtn">Rekod Kehadiran</button>
@@ -17,5 +18,6 @@
             alert("Kehadiran direkodkan!");
         });
     </script>
+    
 </body>
 </html>
