Pembangunan Sistem Kehadiran

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <p>Sila tekan butang di bawah untuk merekod kehadiran anda</p>
     
   
-    <button id="rekodBtn">Rekod Kehadiran</button>
+    <button onclick="rekod()">Rekod Kehadiran</button>
 
-  
     <script>
-        document.getElementById("rekodBtn").addEventListener("click", function() {
-            alert("Kehadiran direkodkan!");
-        });
+        function rekod() {
+            alert("Kehadiran berjaya direkod!");
+        }
     </script>
     
 </body>
